--- a/index.html
+++ b/index.html
@@ -4,7 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Library</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>Your Library.</h1>
+    </header>
+    <div>
+      <div>
+        <h4>Crime and Punishment</h4>
+        <h5>Fyodor Dostoevsky</h5>
+        <p>657 pages</p>
+        <button>Read</button>
+        <button>Delete</button>
+      </div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </body>
 </html>
